assets/static/common.css
body {
    color-scheme: light dark;
    min-height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-family: system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

body.fullscreen {
    height: 100vh;
}

nav,
nav > a {
    display: flex;
    flex-direction: row;
}

input[type="submit"],
a {
    color: inherit;
}

a.nav,
a.button,
a:hover,
.favicon {
    text-decoration: none;
}

.logo {
    display: grid;
    grid-template-columns: 32px 32px;
    direction: ltr;
}

.chest {
    width: 32px;
    height: 32px;
    padding: 0;
}

.mw-logo {
    width: 64px;
    height: 64px;
    padding: 0;
}

nav h1 {
    font-size: 32px;
    margin: auto 0;
    line-height: 1;
}

#login {
    flex-grow: 1;
    text-align: end;
}

body > div,
footer {
    margin: 8px;
}

body > div {
    flex-grow: 0;
}

.section-list {
    display: flex;
    flex-wrap: wrap;
    column-gap: 40px;
}

.timezone-wrapper {
    display: none;
}

.center {
    text-align: center;
}

.center table {
    margin-inline: auto;
}

.button-row {
    flex-flow: row wrap;
}

div.button-row {
    display: flex;
    padding: 0 16px;
}

.center .button-row {
    justify-content: center;
}

span.button-row {
    display: inline-flex;
    padding: 0;
}

.button-row + .button-row {
    margin-top: 8px;
}

.button-row form {
    padding: 0;
    border: 0;
    margin: 0;
}

.menu input[type="submit"],
.menu button,
.menu .button {
    display: block;
    border-block-start-width: 0;
    border-inline-start-width: 1px;
}

.menu form:nth-child(1) input[type="submit"],
.menu form:nth-child(1) button,
.menu .button:nth-child(1) {
    border-block-start-width: 1px;
    border-start-start-radius: 0;
    border-end-start-radius: 0;
}

.menu form:nth-last-child(1) input[type="submit"],
.menu form:nth-last-child(1) button,
.menu .button:nth-last-child(1) {
    border-start-end-radius: 0;
    border-end-start-radius: 8px;
    border-end-end-radius: 8px;
}

.menu form {
    padding-block: 0;
}

.menu input[type="submit"],
.menu button {
    text-align: start;
    width: 100%;
}

.popover-wrapper {
    position: relative;
}

input[type="submit"],
button {
    font-size: unset;
    font-family: unset;
}

[popover] {
    inset: unset;
    width: auto;
    height: auto;
    padding: 0;
    background: transparent;
    border: none;
    position: fixed;
    top: 0px;
    right: 0px;
    pointer-events: none;
}

.menu {
    display: none;
    position: absolute;
    top: calc(100% - 1px);
    width: 50vw;
    justify-content: start;
}

[popover]:popover-open + .menu {
    display: grid;
}

[popover]:popover-open + * + button {
    border-end-start-radius: 0 !important;
    border-end-end-radius: 0 !important;
}

input[type="checkbox"] {
    width: 16px;
    height: 16px;
}

input[type="text"],
input[type="number"],
input[type="submit"],
select,
textarea,
button,
.button {
    background-color: white;
    border: 1px solid black;
    padding: 8px;
}

.popover-wrapper button,
input[type="submit"],
.button {
    text-wrap: nowrap;
}

.large-button-row .button {
    text-align: center;
}

.large-button-row .button img {
    height: 64px;
}

.popover-wrapper > button,
input[type="submit"],
.button-row > form button,
.button {
    border-inline-start-width: 0;
}

.button-row .popover-wrapper:nth-child(1) > button,
fieldset input[type="submit"],
.button-row > form:nth-child(1) input[type="submit"],
.button-row > form:nth-child(1) button,
.button:nth-child(1) {
    border-inline-start-width: 1px;
    border-start-start-radius: 8px;
    border-end-start-radius: 8px;
}

.button-row .popover-wrapper:nth-last-child(1) > button,
fieldset input[type="submit"],
.button-row > form:nth-last-child(1) input[type="submit"],
.button-row > form:nth-last-child(1) button,
.button:nth-last-child(1) {
    border-start-end-radius: 8px;
    border-end-end-radius: 8px;
}

[popover]:popover-open + * + button,
input[type="submit"]:hover,
.button.selected,
button:hover,
.button:hover {
    background-color: black;
    color: white;
}

button,
input[type="submit"] {
    cursor: pointer;
}

.favicon-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 8px;
}

.favicon {
    width: 16px;
    height: 16px;
}

button .favicon,
.button .favicon {
    margin-inline-end: 8px;
    vertical-align: sub;
}

.toc {
    display: flex;
}

.toc nav {
    display: block;
    position: sticky;
    border: 1px solid;
    margin: 8px;
    padding: 8px;
    top: 16px;
    white-space: nowrap;
}

article,
form {
    border: 1px solid;
    margin: 8px;
    padding: 8px;
    background-color: white;
}

.button-row + article,
.button-row + form {
    margin-top: -16px;
}

.button-row + form {
    padding-top: 24px;
}

table {
    margin: 8px;
}

.button-row + table {
    margin-top: -16px;
}

.button-row + table th {
    padding-top: 24px;
}

tbody > tr:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

table,
table th,
table td {
    border: 1px solid black;
    border-spacing: 0;
    text-align: center;
    border-collapse: collapse;
}

table th,
table td {
    padding: 4px;
}

td > input[type="text"] {
    box-sizing: border-box;
    width: 100%;
}

.sheikah {
    color: #6000c0;
}

.gerudo {
    color: #c06000;
}

.power {
    color: #c00000;
}

.wisdom {
    color: #2020c0;
}

.courage {
    color: #008000;
}

.numeric {
    text-align: right;
}

td.numeric {
    font-feature-settings: "tnum";
}

.check-item {
    display: flex;
    flex-flow: row;
}

.checkmark {
    border: 1px solid;
    width: 24px;
    height: 24px;
    border-radius: 24px;
    text-align: center;
    margin-inline: 6px;
    margin-block: 3px;
    flex-shrink: 0;
}

.radio-check-item:has(:checked) .checkmark:before {
    content: "✓";
}

.vs1 {
    text-align: end;
}

.vs2 {
    text-align: start;
}

.seed-icons {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.hash,
.password {
    direction: ltr;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.hash {
    gap: 5px;
}

.password {
    gap: 3px;
}

.hash-icon,
.password-icon {
    vertical-align: sub;
}

.hash-icon {
    width: 25px;
    height: 25px;
    filter: drop-shadow(1px 1px 0 black);
}

.password-icon {
    width: 15px;
    height: 15px;
}

h1.hash,
h1.password {
    gap: 10px;
}

h1.hash .hash-icon,
h1.password .password-icon {
    width: 50px;
    height: 50px;
}

fieldset {
    border-width: 0;
}

label:not(:nth-last-child(1)) {
    margin-inline-end: 8px;
}

label.help {
    margin-inline-start: 8px;
}

.warning {
    border: 1px solid #909000;
}

p.warning {
    background-color: #ffff90;
    padding: 8px;
}

.error {
    border: 1px solid #c00000;
}

p.error {
    background-color: #ffc0c0;
    padding: 8px;
}

.info {
    border: 1px solid #00c0c0;
    padding: 8px;
    background-color: #c0ffff;
}

textarea {
    display: block;
    width: 100%;
    resize: vertical;
}

.banner {
    min-height: 0;
    object-fit: contain;
}

.icon {
    max-width: 25vw;
    max-height: 25vh;
}

.nearest-neighbor {
    image-rendering: pixelated;
}

code,
kbd,
pre {
    font-family: monospace, monospace; /* disable the browser-default special case which would render monospace smaller than surrounding text */
}

footer,
.dimmed {
    color: gray;
}

@media (min-width: 448px) {
    nav.index .logo {
        grid-template-columns: 64px 64px;
    }

    nav.index .chest {
        width: 64px;
        height: 64px;
    }

    nav.index h1 {
        font-size: 64px;
    }
}

@media not (min-width: 768px) {
    .toc {
        flex-direction: column-reverse;
    }

    .toc nav {
        white-space: wrap;
    }

    .large-table-content {
        display: none;
    }
}

@media (min-width: 768px) {
    nav h1 {
        font-size: 64px;
    }

    table th,
    table td {
        padding: 8px;
    }

    .small-table-content {
        display: none;
    }
}

@media not (min-width: 1024px) {
    .button-row.large-button-row {
        display: grid;
    }

    .large-button-row .button {
        display: block;
    }

    .large-button-row .button {
        border-block-start-width: 0;
        border-inline-start-width: 1px;
    }

    .large-button-row .button:nth-child(1) {
        border-block-start-width: 1px;
        border-start-end-radius: 8px;
        border-end-start-radius: 0;
    }

    .large-button-row .button:nth-last-child(1) {
        border-end-start-radius: 8px;
        border-start-end-radius: 0;
    }
}

@media (min-width: 1152px) {
    nav.index h1 {
        font-size: 128px;
    }

    h1.hash,
    h1.password,
    .seeds .hash,
    .seeds .password {
        gap: 10px;
    }

    h1 .hash-icon,
    h1 .password-icon,
    .seeds .hash-icon,
    .seeds .password-icon {
        width: 50px;
        height: 50px;
    }
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: black;
        color: white;
    }

    input[type="text"],
    input[type="number"],
    input[type="submit"],
    select,
    textarea,
    button,
    .button {
        background-color: black;
        border-color: white;
    }

    [popover]:popover-open + * + button,
    input[type="submit"]:hover,
    .button.selected,
    button:hover,
    .button:hover {
        background-color: white;
        color: black;
    }

    article,
    form {
        background-color: black;
    }

    tbody > tr:hover {
        background-color: rgba(255, 255, 255, 0.1);
    }

    table,
    table th,
    table td {
        border-color: white;
    }

    .sheikah {
        color: #a040ff;
    }

    .gerudo {
        color: #ffa040;
    }

    .power {
        color: #ff4040;
    }

    .wisdom {
        color: #6060ff;
    }

    .courage {
        color: #20e020;
    }

    .warning {
        border-color: #ffff00;
    }

    p.warning {
        background-color: #404000;
    }

    .error {
        border-color: #ff4040;
    }

    p.error {
        background-color: #400000;
    }

    .info {
        border-color: #40ffff;
        background-color: #004040;
    }
}

@media not (prefers-color-scheme: dark) {
    img.chest-d,
    .hash-icon[alt="SOLD OUT"] {
        filter: invert(1);
    }
}

@media (pointer: coarse) {
    .favicon-container > .favicon {
        background-color: white;
        border: 1px solid black;
        border-radius: 8px;
        padding: 8px;
    }

    .favicon-container > .favicon:hover {
        background-color: black;
        color: white;
    }
}

@media (pointer: coarse) and (prefers-color-scheme: dark) {
    .favicon-container > .favicon {
        background-color: black;
        border-color: white;
    }

    .favicon-container > .favicon:hover {
        background-color: white;
        color: black;
    }
}

@media (hover: hover) {
    .seed {
        display: grid;
        align-items: center;
    }

    .seed > * {
        grid-column: 1;
        grid-row: 1;
    }

    .seed-links {
        z-index: 1;
        opacity: 0%;
    }

    tr:hover .seed-icons {
        opacity: 35%;
        filter: blur(2px);
    }

    tr:hover .seed-links {
        opacity: 100%;
    }
}

